Fix z-index

--- a/snowflakes.css
+++ b/snowflakes.css
@@ -16,6 +16,7 @@
      -moz-user-select: none;
       -ms-user-select: none;
           user-select: none;
+  z-index: 999999;
 }
 .snow span {
   text-shadow: 0 0 5px #08F;
